--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
 
   <link rel="shortcut icon " type="images/x-icon" href="./28.jpg">
-  <title>人人宝</title>
+  <title>人人卡包</title>
 </head>
 
 <body>
@@ -20,5 +20,3 @@
   <div id="app"></div>
   <!-- built files will be auto injected -->
 </body>
-
-</html>
